--- a/src/app/features/profiles/employer/edit-emp-profile/edit-emp-profile.html
+++ b/src/app/features/profiles/employer/edit-emp-profile/edit-emp-profile.html
@@ -1,3 +1,8 @@
+<div class="nav">
+    <a routerLink="/empDashboard"><i class="bi bi-arrow-left me-3 fs-3"></i> </a>
+    <h5 class="mt-2">Back to Dashboard</h5>
+</div>
+
 <mat-card class="seeker-profile-card">
     <mat-card-header>
         <mat-card-title class="text-center">
