--- a/src/app/auth/confirm-email/confirm-email.html
+++ b/src/app/auth/confirm-email/confirm-email.html
@@ -14,7 +14,7 @@
     
     <!-- Loading spinner for verification -->
     <div *ngIf="isVerifying" class="spinner-container">
-      <mat-spinner diameter="40"></mat-spinner>
+      <app-loading-page></app-loading-page>
     </div>
     
     <!-- Success icon -->
