--- a/src/app/features/Application/app-view-emp/app-view-emp.html
+++ b/src/app/features/Application/app-view-emp/app-view-emp.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="applications-section my-3">
-            <div *ngIf="isLoading()" class="loading">Loading applications...</div>
+            <div *ngIf="isLoading()"><app-loading-page></app-loading-page></div>
 
             <div *ngIf="!isLoading()" class="results-container">
                 <div class="results-info">
