--- a/src/app/features/Application/app-view-seeker/app-view-seeker.html
+++ b/src/app/features/Application/app-view-seeker/app-view-seeker.html
@@ -15,7 +15,7 @@
     <div class="container">
 
         <div class="applications-section my-3">
-            <div *ngIf="isLoading()" class="loading">Loading applications...</div>
+            <div *ngIf="isLoading()" class="loading"><app-loading-page></app-loading-page></div>
 
             <div *ngIf="!isLoading()" class="results-container">
                 <div class="results-info">
