--- a/src/app/features/Jobs/edit-job/edit-job.html
+++ b/src/app/features/Jobs/edit-job/edit-job.html
@@ -8,10 +8,7 @@
         <div class="card-body">
           <!-- Loading State -->
           <div *ngIf="isLoading()" class="text-center py-4">
-            <div class="spinner-border text-primary" role="status">
-              <span class="visually-hidden">Loading...</span>
-            </div>
-            <p class="mt-2">Loading job details...</p>
+            <app-loading-page></app-loading-page>
           </div>
 
           <!-- Success and Error Messages -->
