--- a/src/app/features/Jobs/job-details/job-details.html
+++ b/src/app/features/Jobs/job-details/job-details.html
@@ -2,12 +2,7 @@
     <div>
         <!-- Loading indicator -->
         @if (loading()) {
-            <div class="text-center p-5">
-                <div class="spinner-border text-primary" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
-                <p class="mt-2">Loading job details...</p>
-            </div>
+            <app-loading-page></app-loading-page>
         }
         
         <!-- Error message -->
