--- a/src/app/shared/components/footer/footer.html
+++ b/src/app/shared/components/footer/footer.html
@@ -1,22 +1,22 @@
 <div class="footer">
 
-    <div class="row d-flex justify-content-between  p-5">
-        <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="d-flex align-items-center mb-2">
+    <div class="d-flex align-items-center justify-content-center p-5 pb-0">
+        <div class="d-flex justify-content-center align-items-center flex-column">
+            <div class="d-flex align-items-center mb-4">
                 <div class="logo-icon"><i class="bi bi-suitcase-lg"></i></div>
                 <h2 class="HireSmart">HireSmart</h2>
             </div>
             
-            <div style="color: rgb(127, 125, 125);">
+            <div style="color: rgb(127, 125, 125); text-align: center; max-width: 600px; font-size:medium;">
                 Connecting talented professionals with amazing opportunities. 
                 Your career journey starts here with the most intelligent job board platform.
             </div>
-            <div class="py-4" style="color: rgb(127, 125, 125);">
-                <div class="d-flex"> 
+            <div class="py-4 d-flex" style="color: rgb(127, 125, 125);">
+                <div class="d-flex me-4"> 
                     <i class="bi bi-envelope"></i>    
-                    <p class="mx-2">hellohiresmart.com</p>
+                    <p class="mx-2">hello&#64;hiresmart.com</p>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex me-4">
                     <i class="bi bi-telephone"></i>
                     <p class="mx-2">+1 (555) 123-4567</p>
                 </div>
@@ -26,67 +26,15 @@
                 </div>
             </div>
         </div>
-
-        <div class="col-lg-2 col-md-6 col-sm-12">
-            <h5>Job Seekers</h5>
-            <div class="d-flex flex-column">
-                <a rel="" href="#">Browse Jobs</a>
-                <a rel="" href="#">Career Advice</a>
-                <a rel="" href="#">Resume Builder</a>
-                <a rel="" href="#">Salary Guide</a>
-                <a rel="" href="#">Interview Tips</a>
-            </div>
-        </div>
         
-        <div class="col-lg-2 col-md-6 col-sm-12">
-            <h5>Employers</h5>
-            <div class="d-flex flex-column">
-                <a rel="" href="#">Post a Job</a>
-                <a rel="" href="#">Find Candidates</a>
-                <a rel="" href="#">Employer Branding</a>
-                <a rel="" href="#">Hiring Solutions</a>
-                <a rel="" href="#">Pricing</a>
-            </div>
-        </div>
-
-        <div class="col-lg-2 col-md-6 col-sm-12">
-            <h5>Company</h5>
-            <div class="d-flex flex-column">
-                <a rel="" href="#">About Us</a>
-                <a rel="" href="#">Careers</a>
-                <a rel="" href="#">Press</a>
-                <a rel="" href="#">Partners</a>
-                <a rel="" href="#">Contact</a>
-            </div>
-        </div>
-
-        <div class="col-lg-2 col-md-6 col-sm-12">
-            <h5>Support</h5>
-            <div class="d-flex flex-column">
-                <a rel="" href="#">Help Center</a>
-                <a rel="" href="#">Terms of Service</a>
-                <a rel="" href="#">Privacy Policy</a>
-                <a rel="" href="#">Cookie Policy</a>
-                <a rel="" href="#">Security</a>
-            </div>
-        </div>
     </div> 
 
 
-    <hr>
 
-    <div class="d-flex justify-content-between" style="color: rgb(127, 125, 125); padding: 20px 50px;">
+
+    <div class="text-center" style="color: rgb(127, 125, 125); padding: 20px 50px;">
         <div>
             &copy; 2025 HireSmart. All rights reserved.
-        </div>
-        <div class="d-flex align-items-center">
-            <span style="margin-right: 10px;">Follow Us </span>
-            <div>
-                <a class="icon"><i class="bi bi-facebook"></i></a> 
-                <a class="icon"><i class="bi bi-twitter-x"></i></a> 
-                <a class="icon"><i class="bi bi-linkedin"></i></a>
-                <a class="icon"><i class="bi bi-instagram"></i></a>
-            </div>
         </div>
     </div>
 
