--- a/src/app/features/Explore/explore.html
+++ b/src/app/features/Explore/explore.html
@@ -96,10 +96,10 @@
   
 </div>
 
-<div class="row content">
+<div class="row content animate-on-scroll">
     
-    <div class="col-lg-3 col-md-3 col-sm-12" >
-        <div class="side-bar">
+    <div class="col-lg-3 col-md-3 col-sm-12 animate-on-scroll" >
+        <div class="side-bar animate-on-scroll">
             <h5 class="my-3 fs-3">Filters</h5>
 
             <!-- Category Filter -->
@@ -219,8 +219,8 @@
     </div>
 
     <!-- Main Content -->
-    <div class="col-lg-9 col-md-9 col-sm-12" >
-        <div class="main-content">
+    <div class="col-lg-9 col-md-9 col-sm-12 animate-on-scroll" >
+        <div class="main-content animate-on-scroll">
             
             <!-- Loading State -->
             @if (isLoading()) {
